<resources>
    <string name="app_name">Assessment1</string>
    <string name="hitung">Hitung</string>
    <string name="bilanganPertama">Bilangan Pertama</string>
    <string name="bilanganKedua">Bilangan Kedua</string>
    <string name="hasilHitung">Hasil: %1$.2f</string>
    <string name="jKalkulator">KALKULATOR</string>
    <string-array name="operator">
        <item>Pilih Operator</item>
        <item>+ (Penjumlahan)</item>
        <item>- (Pengurangan)</item>
        <item>x (Perkalian)</item>
        <item>/ (Pembagian)</item>
    </string-array>
    <string name="textCopyright">Aplikasi ini adalah sebuah aplikasi Android sederhana yang dibuat untuk keperluan Assessment 2. Dalam aplikasi ini terdapat operator penjumlahan, pengurangan, perkalian, dan pembagian.
        \n\nAplikasi ini dibuat oleh:\nElang Andhika Yudha Prawira\n6706213073\nD3RPLA45-03. Temukan kode ini di https://github.com/akuyudha/Assessment1.git
        \n\nCopyright © 2023 Elang Andhika Yudha Prawira(yudhabae).</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bagikan">Bagikan</string>
    <string name="templateBagikan">Bilangan pertama: %1$s\nBilangan kedua: %2$s\nOperator: %3$s\n\n%4$s</string>
    <string name="nama_aplikasi">Kalkulator</string>
    <string name="data_null">Belum ada data</string>
    <string name="history">History</string>
    <string name="hasil_x">Jumlah: %1$.1f</string>
    <string name="data_x">Bil1: %1$.1f - Bil2: %2$.1f - Operator: %3$s</string>
    <string name="hapus">Hapus Histori</string>
    <string name="konfirm_hapus">Yakin ingin menghapus permanen semua histori?</string>
    <string name="hapus_ya">Hapus</string>
    <string name="hapus_batal">Batal</string>
    <string name="operator_png">operator.png</string>
    <string name="deskripsi_operator">Deskripsi Operator</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Pengingat</string>
    <string name="channel_desc">Pengingat kalkulator otomatis</string>
    <string name="notif_title">Ayo berhitung!</string>
    <string name="notif_text">Cek sekarang untuk mulai menghitung..</string>
</resources>