<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigasi"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="org.d3if3073.assessment1.ui.hitung.MainFragment"
        android:label="@string/nama_aplikasi"
        tools:layout="@layout/main_fragment" >
        <action
            android:id="@+id/action_mainFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_mainFragment_to_historiFragment"
            app:destination="@id/historiFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if3073.assessment1.ui.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/about_fragment"/>
    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if3073.assessment1.ui.histori.HistoriFragment"
        android:label="@string/history"
        tools:layout="@layout/history_fragment"/>
</navigation>